syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.ume.grpc.proto.digital_account";
option java_outer_classname = "DigitalAccountProto";

package digital_account;

service DigitalAccount {
  rpc createDigitalAccount (CreateDigitalAccountRequest) returns (DigitalAccountResponse) {}
}

message CreateDigitalAccountRequest {
  int64 accountId = 1;
  double value = 2;
}

message DigitalAccountResponse {
  int64 id = 1;
  int64 accountId = 2;
  double value = 3;
}